--- a/index.html
+++ b/index.html
@@ -10,55 +10,26 @@
     <p>Rock Paper Scissor</p>
     <button
       onclick="
-        const randomNumber = Math.random();
-
-        let computerMove = '';
-
-        if(randomNumber >=0 && randomNumber <1/3){
-            computerMove = 'rock'
-        }else if(randomNumber >= 1/3 && randomNumber <2/3){
-          computerMove = 'paper'
-        }else if(randomNumber >=2/3 && randomNumber < 1){
-          computerMove = 'scissor'
-        }
-      
-        let result = '';
-
-        if(computerMove === 'rock'){
-          result = 'Tie'
-        }else if(computerMove === 'paper'){
-          result = 'You lose'
-        }else if(computerMove === 'scissor'){
-          result = 'You win'
-        }
-
-        alert(`You picked rock. Computer picked ${computerMove}, ${result}`);
+      playGame('rock');
     "
     >
       Rock
     </button>
     <button
       onclick="
-        if(randomNumber >=0 && randomNumber <1/3){
-            computerMove = 'rock'
-        }else if(randomNumber >= 1/3 && randomNumber <2/3){
-          computerMove = 'paper'
-        }else if(randomNumber >=2/3 && randomNumber < 1){
-          computerMove = 'scissor'
-        }
-        if(computerMove === 'rock'){
-          result = 'You win'
-        }else if(computerMove === 'paper'){
-          result = 'Tie'
-        }else if(computerMove === 'scissor'){
-          result = 'You lose'
-        }
-
-        alert(`You picked paper. Computer picked ${computerMove}, ${result}`);
+       playGame('paper');
     "
     >
       Paper
     </button>
-    <button>Scissor</button>
+    <button
+      onclick="
+      playGame('scissor');
+    "
+    >
+      Scissor
+    </button>
+
+    <script src="app.js"></script>
   </body>
 </html>
