--- a/index.html
+++ b/index.html
@@ -10,26 +10,38 @@
     <p>Rock Paper Scissor</p>
     <button
       onclick="
-      playGame('rock');
-    "
+          playGame('rock');
+        "
     >
       Rock
     </button>
     <button
       onclick="
-       playGame('paper');
-    "
+          playGame('paper');
+        "
     >
       Paper
     </button>
     <button
       onclick="
-      playGame('scissor');
-    "
+          playGame('scissor');
+        "
     >
       Scissor
     </button>
 
+    <button
+      onclick="
+     score.wins= 0,
+    score.loss= 0,
+    score.tie= 0
+    localStorage.removeItem('score');
+    "
+    >
+      Reset score
+    </button>
+
     <script src="app.js"></script>
+    <script src=""></script>
   </body>
 </html>
